--- a/service/.env.example
+++ b/service/.env.example
@@ -10,6 +10,8 @@ OPENAI_API_BASE_URL=
 # OpenAI API Model - https://platform.openai.com/docs/models
 OPENAI_API_MODEL=
 
+OPENAI_WEB_MODEL=
+
 # Reverse Proxy
 API_REVERSE_PROXY=
 
