--- a/service/.env.example
+++ b/service/.env.example
@@ -4,7 +4,7 @@ OPENAI_API_KEY=
 # change this to an `accessToken` extracted from the ChatGPT site's `https://chat.openai.com/api/auth/session` response
 OPENAI_ACCESS_TOKEN=
 
-# OpenAI API Base URL - https://api.openai.com
+# OpenAI API Base URL - https://api.openai.com/v1
 OPENAI_API_BASE_URL=
 
 # OpenAI API Model - https://platform.openai.com/docs/models
