--- a/service/package.json
+++ b/service/package.json
@@ -33,6 +33,7 @@
     "express-rate-limit": "^6.7.0",
     "https-proxy-agent": "^5.0.1",
     "isomorphic-fetch": "^3.0.0",
+    "keyv": "^4.5.2",
     "node-fetch": "^3.3.0",
     "socks-proxy-agent": "^7.0.0"
   },
