--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ VITE_GLOB_OPEN_LONG_REPLY=false
 # When you want to use PWA
 VITE_GLOB_APP_PWA=false
 
-VITE_OPENAI_API_MODEL="gpt-4,gpt-4-32k,gpt-3.5-turbo"
+VITE_OPENAI_API_MODEL="gpt-4-0314,gpt-4-32k-0613,gpt-3.5-turbo-0613,gpt-3.5-turbo-16k-0613"
