--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "bootstrap": "pnpm install && pnpm run common:prepare",
-    "common:cleanup": "rimraf node_modules && rimraf pnpm-lock.yaml",
-    "common:prepare": "husky install"
+    "common:cleanup": "rimraf node_modules && rimraf pnpm-lock.yaml"
   },
   "dependencies": {
     "@traptitech/markdown-it-katex": "^3.6.0",
@@ -50,9 +49,7 @@
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
     "eslint": "^8.35.0",
-    "husky": "^8.0.3",
     "less": "^4.1.3",
-    "lint-staged": "^13.1.2",
     "markdown-it-link-attributes": "^4.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
@@ -62,10 +59,5 @@
     "vite": "^4.2.0",
     "vite-plugin-pwa": "^0.14.4",
     "vue-tsc": "^1.2.0"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,vue}": [
-      "pnpm lint:fix"
-    ]
   }
 }
